--- a/py_belt_exam_20Dec16/apps/user/templates/user/signup.html
+++ b/py_belt_exam_20Dec16/apps/user/templates/user/signup.html
@@ -7,12 +7,7 @@
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <script src="http://code.jquery.com/jquery-3.1.1.js"></script>
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <!-- <title>r | U | n | ? - Login</title> -->
-        <title>r / U / n - Login</title>
+        <title>r | U | n - Register</title>
 
         {% load staticfiles %}
         <!-- <link rel="stylesheet" href="{% static 'users/css/style.css' %}" media="screen" title="no title"  charset="utf-8"> -->
@@ -37,9 +32,6 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'user/ico/apple-touch-icon-72-precomposed.png' %}">
         <link rel="apple-touch-icon-precomposed" href="{% static 'user/ico/apple-touch-icon-57-precomposed.png' %}">
 
-        <link rel="stylesheet" href="{% static 'user/css/style.css' %}">
-
-
     </head>
 
     <body>
@@ -63,90 +55,89 @@
                         </div>
                     </div> -->
 
-                    <div class="row">
-                        <div class="col-sm-8">
-                            <div class="form-box">
-                                <div class="form-top-left">
-                                    <h3>Awesome Information About our Product Here</h3>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                    <p>Value 01</p>
-                                </div>
+                    <div class="col-sm-8">
+                        <div class="form-box">
+                            <div class="form-top-left">
+                                <h3>Awesome Information About our Product Here</h3>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
+                                <p>Value 01</p>
                             </div>
                         </div>
-                        <div class="col-sm-4">
-                        <!-- Added from previous HTML -->
-                        {# Load the tag library #} {% load bootstrap3 %} {# Load CSS and JavaScript #} {% bootstrap_javascript %}
-                        <!-- this was after load CSS and JavaScript {% bootstrap_css %} {% bootstrap_javascript %} -->
-                            <div class="errors">
-                                {% if messages %}
-                                    {% for message in messages %}
-                                        <p>{{ message }}</p>
-                                    {% endfor %}
-                                {% endif %}
-                            </div>
-                        	<div class="form-box">
+                    </div>
+                    <div class="col-sm-4">
 
-	                        	<div class="form-top">
+
+                        	<div class="form-box">
+                        		<div class="form-top">
+                                    {% if messages %}
+                                        {% for message in messages %}
+                                            <p>{{ message }}</p>
+                                        {% endfor %}
+                                    {% endif %}
 	                        		<div class="form-top-left">
-	                        			<h3>Login to our site</h3>
-	                            		<p>Enter username and password to log on:</p>
+	                        			<h3>Sign up now</h3>
+	                            		<p>Fill in the form below to get instant access:</p>
 	                        		</div>
 	                        		<div class="form-top-right">
-	                        			<!-- <i class="fa fa-lock"></i> -->
+	                        			<i class="fa fa-pencil"></i>
 	                        		</div>
 	                            </div>
 	                            <div class="form-bottom">
-                                    <!-- Added from previous HTML -->
-                                    {# Display a form #}
-                                    {% csrf_token %}
-                                    {% buttons %}
-				                    <form role="form" action="{% url 'user:signin' %}" method="post" class="login-form">
+				                    <form role="form" action="{% url 'user:signup' %}" method="POST" class="registration-form">
                                         {% csrf_token %}
-                                        <div class="form-group">
+				                    	<div class="form-group">
+				                    		<label class="sr-only" for="form-first-name">First name</label>
+				                        	<input type="text" name="first_name" placeholder="First name..." class="form-first-name form-control" id="form-first-name">
+				                        </div>
+				                        <div class="form-group">
+				                        	<label class="sr-only" for="form-last-name">Last name</label>
+				                        	<input type="text" name="last_name" placeholder="Last name..." class="form-last-name form-control" id="form-last-name">
+				                        </div>
+				                        <div class="form-group">
 				                        	<label class="sr-only" for="form-email">Email</label>
 				                        	<input type="text" name="email" placeholder="Email..." class="form-email form-control" id="form-email">
 				                        </div>
-				                        <div class="form-group">
+                                        <div class="form-group">
 				                        	<label class="sr-only" for="form-password">Password</label>
 				                        	<input type="text" name="password" placeholder="Password..." class="form-password form-control" id="form-password">
 				                        </div>
+                                        <div class="form-group">
+				                        	<label class="sr-only" for="form-password-confirm">Password Confirmation</label>
+				                        	<input type="text" name="confirm_password" placeholder="Password Confirmation..." class="form-password-confirm form-control" id="form-password-confirm">
+				                        </div>
+
+				                        <button type="submit" class="btn">Sign Me Up!</button>
+
                                         <!-- <div class="form-group">
-				                    		<label class="sr-only" for="form-username">Username</label>
-				                        	<input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+				                    		<label class="sr-only" for="form-first-name">First name</label>
+				                        	<input type="text" name="form-first-name" placeholder="First name..." class="form-first-name form-control" id="form-first-name">
 				                        </div>
 				                        <div class="form-group">
-				                        	<label class="sr-only" for="form-password">Password</label>
-				                        	<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
-				                        </div> -->
-				                        <button type="submit" class="btn"><span>{% bootstrap_icon "ok" %}</span>Log In!</button>
-                                        {% endbuttons %}
+				                        	<label class="sr-only" for="form-last-name">Last name</label>
+				                        	<input type="text" name="form-last-name" placeholder="Last name..." class="form-last-name form-control" id="form-last-name">
+				                        </div>
+				                        <div class="form-group">
+				                        	<label class="sr-only" for="form-email">Email</label>
+				                        	<input type="text" name="form-email" placeholder="Email..." class="form-email form-control" id="form-email">
+				                        </div>
+				                        <div class="form-group">
+				                        	<label class="sr-only" for="form-about-yourself">About yourself</label>
+				                        	<textarea name="form-about-yourself" placeholder="About yourself..."
+				                        				class="form-about-yourself form-control" id="form-about-yourself"></textarea>
+				                        </div>
+				                        <button type="submit" class="btn">Sign me up!</button> -->
 				                    </form>
-
 			                    </div>
-		                    </div>
-                            <a href="{% url 'user:signup' %}">Go to Registration Page</a>
-		                	<div class="social-login">
-	                        	<h3>...or login with:</h3>
-	                        	<div class="social-login-buttons">
-		                        	<a class="btn btn-link-2" href="#">
-		                        		<i class="fa fa-facebook"></i> Facebook
-		                        	</a>
-		                        	<!-- <a class="btn btn-link-2" href="#">
-		                        		<i class="fa fa-twitter"></i> Twitter
-		                        	</a> -->
-		                        	<a class="btn btn-link-2" href="#">
-		                        		<i class="fa fa-google-plus"></i> Google Plus
-		                        	</a>
-	                        	</div>
-	                        </div>
+                        	</div>
+
                         </div>
                     </div>
 
@@ -163,12 +154,9 @@
         			<div class="col-sm-8 col-sm-offset-2">
         				<div class="footer-border"></div>
         				<p><i class="fa fa-smile-o"></i><a href="#" target="_blank">     a jolly roger global dominion co. production     </a><i class="fa fa-smile-o"></i></p>
-                        <!-- <p>Made by Anli Zaimi at <a href="http://azmind.com" target="_blank"><strong>AZMIND</strong></a>
-            				having a lot of fun. <i class="fa fa-smile-o"></i></p> -->
         			</div>
 
         		</div>
-                {# Display django.contrib.messages as Bootstrap alerts #} {% bootstrap_messages %}
         	</div>
         </footer>
 
