login and reg changes - models, style, both html, urls, views and db

--- a/py_belt_exam_20Dec16/apps/user/static/user/css/style.css
+++ b/py_belt_exam_20Dec16/apps/user/static/user/css/style.css
@@ -211,13 +211,17 @@ footer a:hover, footer a:focus { color: #fff; border-bottom: 1px dotted #fff; }
   margin: 0px 5px 0px 0px;
 }
 
-.col-sm-4 .errors {
-
+.alert {
+  position:absolute;
+  left: 15px;
+  bottom: 20px;
+  z-index: 10;
 }
 
-.col-sm-4 .errors p {
-  color: white;
+.inner-bg {
+  position:relative;
 }
+
 
 /***** Media queries *****/
 
