--- a/py_belt_exam_20Dec16/apps/user/templates/user/signup.html
+++ b/py_belt_exam_20Dec16/apps/user/templates/user/signup.html
@@ -40,23 +40,23 @@
         <div class="top-content">
 
             <div class="inner-bg">
+
                 <div class="container">
 
                     <!-- <div class="row">
+
                         <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1><strong>Bootstrap</strong> Login &amp; Register Forms</h1>
+
                             <div class="description">
-                            	<p>
-	                            	This is a free responsive <strong>"login and register forms"</strong> template made with Bootstrap.
-	                            	Download it on <a href="http://azmind.com" target="_blank"><strong>AZMIND</strong></a>,
-	                            	customize and use it as you like!
-                            	</p>
+
                             </div>
                         </div>
                     </div> -->
 
                     <div class="col-sm-8">
+
                         <div class="form-box">
+
                             <div class="form-top-left">
                                 <h3>Awesome Information About our Product Here</h3>
                                 <p>Value 01</p>
@@ -74,14 +74,9 @@
                     </div>
                     <div class="col-sm-4">
 
-
+                    {# Load the tag library #} {% load bootstrap3 %} {# Load CSS and JavaScript #} {% bootstrap_javascript %}
                         	<div class="form-box">
                         		<div class="form-top">
-                                    {% if messages %}
-                                        {% for message in messages %}
-                                            <p>{{ message }}</p>
-                                        {% endfor %}
-                                    {% endif %}
 	                        		<div class="form-top-left">
 	                        			<h3>Sign up now</h3>
 	                            		<p>Fill in the form below to get instant access:</p>
@@ -139,7 +134,16 @@
                         	</div>
 
                         </div>
+
                     </div>
+
+                    <!-- {# Display django.contrib.messages as Bootstrap alerts #} -->
+
+                    {% if messages %}
+
+                    <div class="alert alert-danger" role="alert">{% for message in messages %}<p>{{ message }}</p>{% endfor %}</div>
+
+                    {% endif %}
 
                 </div>
             </div>
