--- a/py_belt_exam_20Dec16/apps/user/static/user/css/style.css
+++ b/py_belt_exam_20Dec16/apps/user/static/user/css/style.css
@@ -89,6 +89,32 @@ img { max-width: 100%; }
 
 /***** Top content *****/
 
+#header .col-md-6 h3 {
+  text-align: left;
+  color:  white;
+}
+
+#header .col-md-6 ul {
+  margin-top: 20px;
+  text-align: right;
+  /*margin-left: auto;
+  margin-right: 15px;*/
+}
+
+#header .col-md-6 ul li {
+  display: inline;
+  padding: 0px 10px 10px 10px;
+
+}
+
+#header {
+  opacity: 1;
+  height: 70px;
+  margin-bottom: 40px;
+
+}
+
+
 .inner-bg {
   padding: 20px 0 40px 0;
   /*padding: 60px 0 80px 0;*/
@@ -123,6 +149,13 @@ img { max-width: 100%; }
 	background: rgba(0, 0, 0, 0.35);
 	-moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
 	text-align: left;
+}
+
+.dashTitle {
+  background: #444;
+	background: rgba(0, 0, 0, 0.35);
+  padding: 30px 0px 10px 0px;
+  -moz-border-radius: 4px 4px 0 0; -webkit-border-radius: 4px 4px 0 0; border-radius: 4px 4px 0 0;
 }
 
 .form-top-left {
