--- a/RUN-SCRUBBED/RUNproject/apps/main_app/templates/user/profile.html
+++ b/RUN-SCRUBBED/RUNproject/apps/main_app/templates/user/profile.html
@@ -22,7 +22,7 @@
             <h3>Email:</h3><p> {{email}}</p>
             <h3>Password:</h3><p> {{password}}</p>
             <h3>Events Created:</h3>{% for name in user_created %} <p> {{name.name}}</p> {% endfor %}
-            <h3>Events Attending:</h3>
+            <h3>Events Attending:</h3><p>{{count}} hi</p>
             <h3>Pending Invitations:</h3>
         </div>
         <a href="">Edit</a>
