--- a/RUN-SCRUBBED/RUNproject/apps/main_app/templates/main_app/index.html
+++ b/RUN-SCRUBBED/RUNproject/apps/main_app/templates/main_app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="http://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="{% static 'main_app/js/weatherapp.js' %}"></script>
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
     <link rel="stylesheet" href="{% static 'main_app/bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'main_app/font-awesome/css/font-awesome.min.css' %}">
@@ -55,9 +56,7 @@
     }
   } );
   </script>
-
 </head>
-
 <body>
     <div class="container">
         <p></p>
@@ -70,7 +69,6 @@
                 <div class="col-md-4"></div>
                 <div class="col-md-6">
                     <ul>
-                        <!--need to pass the user id from this page to profile page-->
                         <li><a href="{% url 'user:profile' %}">My Profile</a></li>
                         <li>|</li>
                         <li><a href="{% url 'event:create' %}">Create New Event</a></li>
@@ -121,7 +119,7 @@
                                 <h4>{{event.address.location_name}}</h4>
                                 <h4>{{event.address.neighborhood}}</h4>
                                 <h4>{{event.address.address_primary}} {{event.address.address_street}}</h4>
-                                <h4>{{event.address.address_city}}, {{event.address.address_state}} {{event.address.postal_code}}<h4>
+                                <h4 id="city_input">{{event.address.address_city}}, {{event.address.address_state}} {{event.address.postal_code}}<h4>
                                 <p>{{ event.description }}</p>
                             </div>
                             <div class="col-md-2"></div>
@@ -133,7 +131,7 @@
                     <div class="dashItemBot unique">
                         <div class="row">
                             <div class="col-md-6 weather">
-                                <h4>Cloudy - 34&deg </h4>
+                                <h4 class="weather">Sup Sup Sup</h4>
                             </div>
                                 <div class="col-md-2 message">
                                     <img src="{% static 'main_app/img/dashtileitems/messages.png' %}" alt="message icon" />2
@@ -154,5 +152,4 @@
         {# Display django.contrib.messages as Bootstrap alerts #} {% bootstrap_messages %}
     </div>
 </body>
-
 </html>
